Fixed header position on Firefox

--- a/src/styl/_header.styl
+++ b/src/styl/_header.styl
@@ -6,9 +6,10 @@ body
     background-color #141414
     padding rem(10px) rem(15px)
     position fixed
+    left 0
     width 100%
     z-index 10
-    transition top 0.5s
+    transition top 0.5s, left 0.3s ease
     +above(cut)
         padding rem(15px) rem(0px)
     .logo
