--- a/src/styl/_menu.styl
+++ b/src/styl/_menu.styl
@@ -18,6 +18,8 @@ body.has-push-menu
         left rem(240px)
         .progress-bar
             left rem(240px)
+        .bar-header
+            left rem(240px)
 
 aside
     position fixed
